Added all classes testing out it runs