@@ -3,22 +3,17 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 
 public class RouterTable {
-    public static void main(String[] args){
-        String[] command = {"nmap", "localhost"};
-
+    public static void main(){
         try {
-            ProcessBuilder processBuilder = new ProcessBuilder(command);
-            Process process = processBuilder.start();
-
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-
+            Process process = Runtime.getRuntime().exec("route print");
+            BufferedReader reader = new BufferedReader( new InputStreamReader(process.getInputStream()));
             String line;
-            while ((line = reader.readLine()) != null) {
+            while ((line = reader.readLine()) != null){
                 System.out.println(line);
             }
+            reader.close();
             process.waitFor();
-
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException | InterruptedException e){
             e.printStackTrace();
         }
     }
